k8s/manifests/kong/gateway.yaml
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
spec:
  controllerName: konghq.com/gateway-operator
  parametersRef:
    group: gateway-operator.konghq.com
    kind: GatewayConfiguration
    name: kong
    namespace: default
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: kong
  namespace: default
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: wildcard-https
      protocol: HTTPS
      port: 443
      hostname: "*.o.cavnet.cloud"
      tls:
        certificateRefs:
          - kind: Secret
            group: ""
            name: o.cavnet-wildcard-cert
